# coloreo

./: GrafoSt2020.h  README.md  grafo.c  grafo.corr  grafoSmall.h  grafoUno.g  greedy.py  huckSm.corr  main.c  readfromfile.c  reordenes.md  test.py  test1.corr  veinteveinte.c  veinteveinte.h
2021/: .gitignore
2021/de_mauro/: Makefile  README.md  generar_graph.md  logs_20_05.md  main.c
2021/de_mauro/carga-de-grafos/: GrafoSt21.h  assert.h  index.c  main1.c  main2.c  main_posta.c  requeridas.c  requeridas.h  roma_victor_tests.c  safe_stdlib.c
2021/de_mauro/carga-de-grafos/Array/: Array.c  array_tests.c
2021/de_mauro/carga-de-grafos/ArrayU32/: ArrayU32.c
2021/de_mauro/carga-de-grafos/Dimacs/: Dimacs.c  dimacs_tests.c
2021/de_mauro/carga-de-grafos/Grafo/: GrafoSt.c  grafo_benchmark.c  grafo_desde_dimacs.c  grafo_tests.c
2021/de_mauro/carga-de-grafos/Line/: Line.c  line_tests.c
2021/de_mauro/carga-de-grafos/Nombres/: Nombres.c  nombres_tests.c
2021/de_mauro/carga-de-grafos/Ordenamiento/: Ordenamiento.c  Ordenamiento.h
2021/de_mauro/carga-de-grafos/SortedSetU32/: SortedSetU32.c
2021/de_mauro/carga-de-grafos/String/: MaybeString.c  String.c  string_tests.c
2021/de_mauro/carga-de-grafos/StringArray/: StringArray.c  string_array_tests.c
2021/de_mauro/carga-de-grafos/Tipos/: Tipos.c  Tipos.h
2021/de_mauro/carga-de-grafos/Vertices/: Vertices.c  Vertices.h
2021/de_mauro/carga-de-grafos/common/: common.c  common.h
2021/de_mauro/carga-de-grafos/u32/: maybe_u32.c  pair_u32.c
2021/de_mauro/grafos/: chico.corr  ej10.corr  ej10_2.corr
2021/de_mauro/src/: GrafoSt21.h  ejemplo.c
2021/grafos/: grafo1.corr
2021/primera_entrega/: GrafoSt2021.h  GrafoSt21.h  README.md  RomaVictor.c  a  a.out  caso5.corr  constr.corr  grados.corr  grafo.c  grafo.h  integrantes.txt  main.c  reporte.txt  test.md  test.py  veinteveinte.c  veinteveinte.h
2021/segunda_entrega/: GrafoSt21.h  README.md  RomaVictor.c  RomaVictor.h  a.out  aux.c  grafo.h  requeridas.c  requeridas.h
entrega/PalacioGonzalez/: grupo.txt
entrega/PalacioGonzalez/CangrejoEstelar/: calculoscongrafos.c  calculoscongrafos.h  requeridas.c  requeridas.h
grafos/: grafowp.corr  huck.corr  test2.corr
intento1/: README.md
intento1/VillagraCiancaglini/: meson.build  pending.md
intento1/VillagraCiancaglini/CangrejoEstelar/: alternate_test.c  array.c  graph.c  order.h  parse_test.c  queue.h  veinteveinte.h
intento2/VillagraCiancaglini/: graphs.txt
intento2/VillagraCiancaglini/CangrejoEstelar/: alternate_test.c  full_test.c  meson.build  order_test.c  parse_test.c  queue_test.c  util_test.c
primera_entrega/: readfromfile.c
proyectoLukas/VillagraCiancaglini/: .clang-format  grupo.txt
proyectoLukas/VillagraCiancaglini/CangrejoEstelar/: algo.c  base.h  full_test.c  graph_test.c  order_test.c  queue.c  util.c
proyectoLukas2/: .gitignore
proyectoLukas2/VillagraCiancaglini/CangrejoEstelar/: GrafoSt2020.h  algo.c  algo_test.c  array.h  array_test.c  graph.c  order.c
